# weather-cli

./: Cargo.toml
src/: cli.rs  config.rs  main.rs  response.rs
